Рефакторинг по критерию Д11.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,6 @@
 {
   "extends": "stylelint-config-htmlacademy",
+  "ignoreFiles": ["source/less/normalize.less"]
 
   "rules": {
     "declaration-no-important": true,
