Исправление ошибок Travis

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,7 +4,6 @@
 
   "rules": {
     "declaration-no-important": true,
-    "indentation": [2, {"ignore": ["inside-parens"]}],
-    "ignoreFiles": ["source/less/normalize.less"]
+    "indentation": [2, {"ignore": ["inside-parens"]}]
   }
 }
