--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "browser-sync": "2.24.x",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
+    "gulp-jsmin": "^0.1.5",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
@@ -25,7 +27,8 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp css",
+    "build": "gulp build",
+    "clean": "gulp clean",
     "start": "gulp start"
   },
   "browserslist": [
